<resources>
    <string name="app_name">H2O</string>
    <string name="options">OPTIONS</string>
    <string name="name_insert">Your name</string>
    <string name="sex_insert">Your sex: </string>
    <string name="age_insert">Your age: </string>
    <string name="sport_insert">I play sports</string>
    <string name="weight_insert">What is your weight?</string>
    <string name="time_insert">Wake-Sleep range</string>
    <string name="less_not">Less Notifications</string>
    <string name="wake">Wake</string>
    <string name="sleep">Sleep</string>
    <string name="str1">YOU DRANK</string>
    <string name="str2">GLASSES OF WATER TODAY</string>
    <string name="c1">you could do better</string>
    <string name="c2">good job</string>
    <string name="toast_weight">Insert your real weight</string>
    <string name="toast_hour">Insert a real hour</string>
    <string name="toast_name">Wow! Your name is really long!</string>
    <string name="toast_neg">You cannot drink less than zero glasses of water!</string>
    <string name="file_not_found">FileNotFoundException caught!</string>
    <string name="io_exception">IOException caught!</string>
    <string name="class_not_found">ClassNotFoundException caught!</string>
    <string name="not_title">Bevi, coglione!</string>
    <string name="title_activity_replay">ReplayActivity</string>
</resources>
