<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    android:weightSum="100.0">


    <EditText
        android:id="@+id/name_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"

        android:backgroundTint="@android:color/black"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name_insert"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <Spinner
        android:id="@+id/sex_spinner"
        android:layout_width="93dp"
        android:layout_height="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="113dp"
        android:backgroundTint="@android:color/black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintTop_creator="1"/>

    <TextView
        android:id="@+id/sex_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/sex_insert"
        android:textColor="@android:color/black"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/sex_spinner"
        app:layout_constraintTop_toBottomOf="@+id/name_space"/>

    <TextView
        android:id="@+id/age_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/age_insert"
        android:textColor="@android:color/black"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/age_spinner"
        app:layout_constraintTop_toBottomOf="@+id/sex_field"/>

    <Spinner
        android:id="@+id/age_spinner"
        android:layout_width="94dp"
        android:layout_height="23dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@android:color/black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sex_spinner"/>

    <TextView
        android:id="@+id/weight_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/weight_insert"
        android:textColor="@android:color/black"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/weight"
        app:layout_constraintTop_toBottomOf="@+id/age_field"/>

    <EditText
        android:id="@+id/weight"
        android:layout_width="90dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="26dp"
        android:backgroundTint="@android:color/black"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_spinner"/>

    <TextView
        android:id="@+id/wake_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/time_insert"
        android:textColor="@android:color/black"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/weight_field"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/wake_hour"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0"/>

    <CheckBox
        android:id="@+id/less_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/less_not"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="27dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"/>

    <CheckBox
        android:id="@+id/sport_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sport_insert"
        android:layout_marginRight="255dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/wake_field"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/less_notifications"
        app:layout_constraintVertical_bias="0.54"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"/>



    <TextView
        android:id="@+id/wake_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="wH"
        android:onClick="onClick"
        android:clickable="true"
        app:layout_constraintRight_toLeftOf="@+id/twoPoints1"
        android:layout_marginRight="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.61"/>
    <TextView
        android:id="@+id/wake_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="wM"
        android:onClick="onClick"
        android:clickable="true"
        app:layout_constraintLeft_toRightOf="@+id/twoPoints1"
        android:layout_marginLeft="8dp"
        app:layout_constraintRight_toLeftOf="@+id/sleep_hour"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.61"/>

    <TextView
        android:id="@+id/twoPoints1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.61"
        android:layout_marginLeft="258dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/sleep_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="sH"
        android:onClick="onClick"
        android:clickable="true"
        app:layout_constraintRight_toLeftOf="@+id/twoPoints2"
        android:layout_marginRight="9dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/weight"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.115"/>
    <TextView
        android:id="@+id/sleep_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="sM"
        android:onClick="onClick"
        android:clickable="true"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="192dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/weight"
        app:layout_constraintVertical_bias="1.0"/>

    <TextView
        android:id="@+id/twoPoints2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        app:layout_constraintRight_toLeftOf="@+id/sleep_min"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/weight"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.105"/>


</android.support.constraint.ConstraintLayout>